# fractaltext-python

./: .gitmodules  .pre-commit-config.yaml  MANIFEST.in  README.rst  pyproject.toml
.github/workflows/: doc.yaml  python.yaml
doc/: .gitattributes
doc/source/: conf.py  index.rst
src/fractaltext/: annotate.py  item.py  naked.py  parse.py  proofwrite.py  serialize.py
test/: test_parse.py  test_proofwrite.py  test_prop.py  test_serialize.py
