[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.sdist]
exclude = [
    ".git",
    "/.gitmodules",
    "/.github",
    "/.pre-commit-config.yaml",
    "/uv.lock",
]
[tool.hatch.build.targets.wheel]
exclude = [
    ".git",
    "/.gitmodules",
    "/.github",
    "/.pre-commit-config.yaml",
    "/uv.lock",
]

[project]
name = "fractaltext"
version = "0.1.0"
description = "FractalText: recursive plaintext data format"
readme = "README.rst"
license = "Apache-2.0"
keywords = ["fractaltext"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: File Formats",
]
authors = [
    { name = "0y2k", email = "0x0y2k@gmail.com" },
]
maintainers = [
    { name = "0y2k", email = "0x0y2k@gmail.com" },
]
requires-python = ">=3.10"
dependencies = ["more-itertools"]

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "ruff>=0.9.10",
]
doc = [
    "sphinx>=8.1.3",
]
test = [
    "hypothesis>=6.129.0",
    "pytest>=8.3.5",
]

[tool.pytest.ini_options]
pythonpath = "./src"
python_files = "test_*.py"
python_classes = "Test*"

[tool.ruff]
indent-width = 2
[tool.ruff.format]
indent-style = "space"
[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line-too-long
    "B008", # function-call-in-default-argument
    "C901", # complex-structure
    "B904", # raise-without-from-inside-except
]
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"] # unused-import
